--- a/RoomDebts/ViewControllers/Reviews/Storyboard/Reviews.storyboard
+++ b/RoomDebts/ViewControllers/Reviews/Storyboard/Reviews.storyboard
@@ -10,6 +10,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="Rubik-Bold.ttf">
+            <string>Rubik-Bold</string>
+        </array>
         <array key="Rubik-Medium.ttf">
             <string>Rubik-Medium</string>
         </array>
@@ -57,14 +60,22 @@
                                     </constraints>
                                 </view>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="xbH-Bh-0tb">
-                                    <rect key="frame" x="0.0" y="233" width="414" height="140"/>
+                                    <rect key="frame" x="0.0" y="233" width="414" height="198"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="NWx-CW-trc">
-                                            <rect key="frame" x="16" y="16" width="382" height="108"/>
+                                            <rect key="frame" x="16" y="16" width="382" height="166"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UA7-o8-B5N" customClass="RoundedButton" customModule="RoomDebts" customModuleProvider="target">
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Iip-TP-A9o" customClass="PrimaryButton" customModule="RoomDebts" customModuleProvider="target">
                                                     <rect key="frame" x="0.0" y="0.0" width="382" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="50" id="ClI-XF-S4w"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="Rubik-Bold" family="Rubik" pointSize="17"/>
+                                                    <state key="normal" title="Distribute"/>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UA7-o8-B5N" customClass="RoundedButton" customModule="RoomDebts" customModuleProvider="target">
+                                                    <rect key="frame" x="0.0" y="58" width="382" height="50"/>
                                                     <color key="backgroundColor" red="0.32549019607843138" green="1" blue="0.49803921568627452" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="50" id="xTo-jV-feu"/>
@@ -85,7 +96,7 @@
                                                     </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jqG-H4-szM" customClass="RoundedButton" customModule="RoomDebts" customModuleProvider="target">
-                                                    <rect key="frame" x="0.0" y="58" width="382" height="50"/>
+                                                    <rect key="frame" x="0.0" y="116" width="382" height="50"/>
                                                     <color key="backgroundColor" red="1" green="0.32549019607843138" blue="0.32549019607843138" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="50" id="BIo-HV-2B0"/>
@@ -324,6 +335,7 @@
                         <outlet property="approveButton" destination="UA7-o8-B5N" id="mUR-mv-2LM"/>
                         <outlet property="checkStatusImageView" destination="xQI-Ft-tWS" id="uxi-5z-ZXE"/>
                         <outlet property="checkStatusLabel" destination="y5d-es-eln" id="kGb-VJ-SYq"/>
+                        <outlet property="distributeButton" destination="Iip-TP-A9o" id="7z5-jn-rz3"/>
                         <outlet property="rejectButton" destination="jqG-H4-szM" id="Ejf-lN-KvP"/>
                         <outlet property="tableView" destination="TCT-PS-Lih" id="mMZ-17-Ep7"/>
                         <segue destination="ga2-DP-siU" kind="presentation" identifier="Unauthorized" id="H67-pj-Lo7"/>
