Hide save button for not creator user. Fix keyboard return type on reject reason screen.

--- a/RoomDebts/ViewControllers/RejectReason/Storyboard/RejectReason.storyboard
+++ b/RoomDebts/ViewControllers/RejectReason/Storyboard/RejectReason.storyboard
@@ -42,7 +42,7 @@
                                                 <rect key="frame" x="15" y="14" width="320" height="153.5"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" name="Rubik-Regular" family="Rubik" pointSize="15"/>
-                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Something went wrong? Write the reason..."/>
                                                     <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
